--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    background-image: url(/images/space-product-bg.jpg);
+    background-image: url(../images/space-product-bg.jpg);
     background-color: black;
 }
 
