--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,12 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-       background-image: url(../images/space-product-bg.jpg);
-
+    background-image: url(../images/space-product-bg.jpg);
+    background-color: black;
 }
+/*bg niet op github????? :((((( */
+
+
 
 body{
     margin: 0;
