--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     color: white;
     background-image: url(../images/space-product-bg.jpg);
     background-color: black;
@@ -19,68 +19,55 @@ html p {
     font-weight: 400;
 }
 
-/*bg niet op github????? :((((( 
-random kwam bg er wel maar de html is niet zwart onder de bg (dat zie je als je */
-/*p onichtbaar (onder header) */
-
-
-
 body {
     margin: 0;
 }
 
-main {}
 
-/* direct onder banner??? */
+/*bg niet op github????? :((((( 
+random kwam bg er wel maar de html is niet zwart onder de bg (dat zie je als je */
+/*p onichtbaar (onder header) */
+
+/*----------------------HEADER------------------*/
 
 
-main img {
-    width: 75vw;
+
+header {
+    background-image: url(../images/space-product-bg.jpg);
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 6em;
 }
 
-/* in het midden???? */
-
 header img {
-    height: 3em;
+    height: 2.5em;
 }
 
 /* logo niet in het midden*/
 
 header div img {
-    height: 2em;
+    height: 2.3em;
 }
 
 header div {
     padding-right: 15px;
-
 }
 
-header {
-    background-color: aqua;
-    position: static;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 4em;
-}
 
 nav {
     display: none;
     position: absolute;
-    background-color: red;
+    background-color: black;
     width: 100vw;
     height: 100vw;
-    align-items: center;
     flex-direction: column;
 }
 
 /*pos fixed maakt alles kapot, bij idles site wel zo/
 moet de hele achtergrond zwart maken, ruimtes tussen de text, midden op de pagina en niet verder scrollen*/
-
-
-
 
 nav ul {
     margin: 0;
@@ -111,13 +98,10 @@ input:checked in html {
 
 label {
     order: -1;
-    position: relative;
     padding-left: 15px;
 }
 
 /*label slecht klikbaar, vraag hulp*/
-
-
 
 label span,
 label span::before,
@@ -137,9 +121,52 @@ label span::after {
 }
 
 label span::before {
-    bottom: 8px;
+    bottom: 10px;
 }
 
 label span::after {
-    top: 8px;
+    top: 10px;
 }
+
+
+/*---------------------MAIN------------------------*/
+main {
+padding-top: 6em;
+}
+
+main p{
+    margin-top: -0.5em;
+}
+
+
+
+main img {
+    width: 60vw;
+}
+
+/* in het midden???? */
+
+main section{
+    display: flex;
+    justify-content: center;
+    line-height: 1.5;
+}
+
+main a img{
+    width: 6em;
+}
+
+main a{
+    text-transform: none;
+    font-size: 12px;
+    text-decoration: none;
+     color:#6c757d;    
+    background-color:transparent;
+    
+}
+
+main a:hover{
+        background-color:transparent;
+    text-decoration: underline;
+     color:#6c757d;;
+} 
