--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,38 @@
 html {
     font-family: Arial, sans-serif;
     color: white;
-    background-image: url(../images/space-product-bg.jpg);
+    background: url(../images/space-product-bg.jpg);
+    background-attachment: fixed;
     background-color: black;
     text-align: center;
     text-transform: uppercase;
 }
 
-html p {
+
+/* er schijnen twee achtergronden te zijn,
+de sterren en daaroverheen een ruis met een opacity, hoe krijg ik dat voor elkaar?????
+
+(kijk images/overlay instructies)
+*/
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url(../images/noise.gif);
+    opacity: 0.25;
+    z-index: -1;
+}
+
+/* hoe krijg ik de overlay over header???*/
+
+
+
+html main p {
     letter-spacing: 8px;
     font-weight: 400;
 }
@@ -29,14 +54,19 @@ html a {
 
 }
 
+
 body {
     margin: 0;
+    padding: 0;
+    width: 100%;
+    /*ruis?   background-image: url(../images/noise.gif);      ????  */
 }
 
+
+
 /* link knoppen */
-section a {
+main section a {
     font-size: 1.25rem;
-    background-color: transparent;
     padding: 8px 16px;
     color: white;
     letter-spacing: -1px;
@@ -44,15 +74,14 @@ section a {
     white-space: nowrap;
 }
 
-section a:hover{
+main section a:hover {
     background-color: white;
     color: black;
 }
 
 section {
     margin-bottom: 3em;
-    padding-left: 15px;
-    padding-right: 15px;
+
 }
 
 /*----------------------HEADER------------------*/
@@ -60,17 +89,19 @@ section {
 
 
 header {
-    background-image: url(../images/space-product-bg.jpg);
     position: fixed;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 6em;
+    background-image: url(../images/space-product-bg.jpg);
 }
 
-header img {
+header > img {
     height: 2.5em;
+    cursor: pointer;
+
 }
 
 /* logo niet in het midden*/
@@ -79,61 +110,56 @@ header div img {
     height: 2.3em;
 }
 
-header div {
-    padding-right: 15px;
+header div:nth-of-type(2) {
+   margin-right: 15px;
 }
 
-/*-------------------------nav----------------*/
-nav {
-    display: none;
-    position: absolute;
-    background-color: black;
-    width: 100vw;
-    height: 100vw;
+ header div:first-of-type{
+    margin-left: 15px;
+    position: relative;
+    order: -1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3em;
+    height: 3em;
+    cursor: pointer;
 }
 
-/*pos fixed maakt alles kapot, bij idles site wel zo/
-moet de hele achtergrond zwart maken, ruimtes tussen de text, midden op de pagina en niet verder scrollen*/
-
-nav ul {
+header div:first-of-type div{
+    height: 4px;
+    width: 2.5em;
+    background: white;
+    border-radius: 2px;
+    border: 0;
     margin: 0;
-    padding: 0;
-    list-style: none;
 }
 
-nav a {
-    text-transform: uppercase;
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    font-weight: 900;
+header div:first-of-type div::before,
+header div:first-of-type div::after {
+    content: '';
+    height: 4px;
+    width: 2.5em;
+    background: white;
+    border-radius: 2px;
+    position: absolute;
 }
 
-input {
-    display: none;
+header div:first-of-type div::before {
+    transform:translateY(-10px);
 }
 
-input:checked ~ nav {
-    display: block;
-    top: 100%;
+header div:first-of-type div::after {
+    transform:translateY(10px);
 }
 
-/*  Hoe krijg ik alles in het midden?
-    hoe krijg ik spacing????
-    Hoe krijg ik de header zwart???
-    hoe krijg ik de pagina gevuld en scrollen onmogelijk???*/
-
-input:checked in html {
-    background-color: black;
-}
-
-
-label {
+/*
+header div:first-of-type {
     order: -1;
     padding-left: 15px;
+    cursor: pointer;
 }
 
-/*label slecht klikbaar, vraag hulp*/
 
 label span,
 label span::before,
@@ -159,6 +185,48 @@ label span::before {
 label span::after {
     top: 10px;
 }
+*/
+/*-------------------------nav----------------*/
+nav {
+    display: none;
+    position: absolute;
+    background-color: black;
+    width: 100vw;
+    height: 100vw;
+    top: 0;
+}
+
+/* body overflow hidden   */
+/*pos fixed maakt alles kapot, bij idles site wel zo/
+moet de hele achtergrond zwart maken, ruimtes tussen de text, midden op de pagina en niet verder scrollen*/
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav a {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 900;
+}
+
+.open{
+    display: block;
+}
+
+
+/*  Hoe krijg ik alles in het midden?
+    hoe krijg ik spacing????
+    Hoe krijg ik de header zwart???
+    hoe krijg ik de pagina gevuld en scrollen onmogelijk???*/
+
+/*javascript----- input niet sem correct */
+
+
 
 
 /*---------------------MAIN------------------------*/
@@ -170,47 +238,66 @@ main p {
     margin-top: -0.5em;
 }
 
-main img {
-    width: 25em;
-}
 
 /* ---------eerste section------------------*/
 
+main section:first-of-type > img:first-of-type {
+    width: 70vw;
+}
 
 
-/* in het midden???? */
-
-
-section:first-of-type a:first-of-type {
-    padding: 0.4em 0.8em;
+main section:first-of-type > a:first-of-type {
     background-color: white;
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 700;
     color: black;
 }
 
 
-section:first-of-type div a img{
-    background-color: green;
-        width: 6.5em;
-    padding: 0;
-
+main section div a > img {
+    height: 1.3em;
 }
 
-section:first-of-type a:last-of-type {
+
+main section:first-of-type > div > a {
     border: none;
+    padding: 0;
+    margin: 0;
+}
+
+main section:first-of-type p {
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
+main section:first-of-type > div > a:hover {
+    border: none;
+    background: none;
+}
+
+main section:first-of-type div {
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5em;
+}
+
+main section:first-of-type div a + a{
+    margin-left: 1em;
+    
+}
+
+main section:first-of-type > a:last-of-type {
+    border: none;
+    padding: 0;
+    margin-top: 0.1em;
     font-family: Arial, sans-seriff;
     text-transform: none;
-    font-size: 12px;
+    font-size: 13px;
     color: #6c757d;
 }
 
-section:first-of-type a:last-of-type:hover {
+section:first-of-type > a:last-of-type:hover {
     background-color: transparent;
     text-decoration: underline;
     color: #6c757d;
-    ;
 }
 
 
@@ -245,17 +332,79 @@ section span::after {
 
 /* --------------YOUTUBE VIDEO---------------------*/
 iframe {
-    width: 33em;
-    height: 300px;
+    width: 95%;
+    height: 13em;
     margin-bottom: 3em;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+
+
+main section:nth-child(1n+2) a {
+    display: block;
+    width: min-content;
+    margin: auto;
 }
 
 /*----------------BUNDLES----------*/
-section:nth-of-type(3) div {
+
+
+/*FLEX*/
+
+/* GRID */
+/*
+section:nth-of-type(3) ul{
+display: grid;
+grid-template-columns: auto auto;
+column-gap: 3px;
+grid-row-gap: 3px;    
+}
+*/
+
+
+section:nth-of-type(3) ul {
+    border: 1px solid white;
+    padding-left: 0;
+    /*geen idee waarom padding-left 0 nodig is*/
     display: flex;
-    width: 50%;
-    height: 5em;
-    border: 1px white solid;
+    justify-content: center;
+    list-style: none;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 3em;
 }
 
-/* bruh waarom doet flex het hier niet ?????*/
+section:nth-of-type(3) ul > li {
+    background-color: aqua;
+}
+
+section:nth-of-type(3) ul > li img {
+    width: 5em;
+}
+
+/*---------------Footer---------*/
+footer span a img {
+    height: 32px;
+}
+
+.ide {
+    fill: red;
+}
+
+
+footer span a + a {
+    margin-left: 0.5em;
+}
+
+footer h2 {
+    font-size: 32px;
+    letter-spacing: -2px;
+}
+
+footer p {
+    font-family: Arial, sans-seriff;
+    text-transform: none;
+    font-size: 16px;
+    color: #6c757d;
+}
