--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ section {
 
 
 main {
-    padding-top: 4.5em;
+    padding-top: 6em;
 }
 
 /* is ALTIJD GELIJK AAN HEADER HEIGHT */
@@ -76,7 +76,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    height: 4.5em;
+    height: 6em;
     background-image: url(../images/space-product-bg.jpg);
     justify-content: space-between;
 }
@@ -179,7 +179,7 @@ nav a {
 
 /*---------------------MAIN------------------------*/
 
-main p {
+main section:first-of-type; p {
     margin-top: -0.5em;
 }
 
@@ -238,9 +238,22 @@ main section:nth-child(1n+2) a {
 /* ---------eerste section------------------*/
 
 main section:first-of-type > img:first-of-type {
-    width: 70vw;
+    margin-top: 3em;
 }
 
+main section:first-of-type > img:first-of-type, iframe {
+    width: 60vw;
+
+}
+
+/* --------------YOUTUBE VIDEO---------------------*/
+/*hoe scale ik deze dormaal????*/
+iframe {
+    height: 40vh;
+    margin-bottom: 3em;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
 main section:first-of-type > a:first-of-type {
     background-color: white;
@@ -298,14 +311,6 @@ section:first-of-type > a:last-of-type:hover {
 
 
 
-/* --------------YOUTUBE VIDEO---------------------*/
-iframe {
-    width: 30em;
-    height: 19.5em;
-    margin-bottom: 3em;
-    margin-left: 15px;
-    margin-right: 15px;
-}
 
 /*-------------------BUNDLES------------*/
 section:nth-of-type(3) > div {
